mqtt/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-external
  namespace: mqtt
spec:
  type: LoadBalancer
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    protocol: TCP
    port: 1883
    targetPort: 1883
