mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mqtt
spec:
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    protocol: TCP
    port: 1883
    targetPort: 1883
  type: ClusterIP
